Add netlink.pdl, mac80211_hwsim.pdl and ieee8011.pdl packets.
Test: ninja -C objs netsimd; ./objs/netsimd -l
Bug: 305723170

Change-Id: Icec74db6b825f65a2668aa2a8142b366af2be00f

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,6 +27,7 @@ if(NOT ANDROID_EMULATOR_BUILD)
 endif()
 
 if(TARGET Rust::Rustc)
+  add_subdirectory(pdl)
   add_subdirectory(rust)
 else()
   message(WARNING "Only building client side dependencies.")
