Set default_value as true for '--no-web-ui' and '--no-cli-ui' and remove netsim, netsim-ui from CMake build
Test: android/rebuild.sh
Change-Id: I895c918ecf00a016cf44b7de9b9a74436ad3c407

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,13 +34,13 @@ endif()
 
 add_subdirectory(proto)
 add_subdirectory(src)
-add_subdirectory(ui)
+# add_subdirectory(ui)
 
 if(TARGET Rust::Rustc)
-  android_add_executable(
-    TARGET netsim LICENSE Apache-2.0 INSTALL . SRC rust/netsim.cc
-    DEPS frontend-client grpc++ netsim-cli-proto-lib netsim-cli-rust-lib
-         protobuf::libprotobuf util-lib)
+  # android_add_executable(
+  #   TARGET netsim LICENSE Apache-2.0 INSTALL . SRC rust/netsim.cc
+  #   DEPS frontend-client grpc++ netsim-cli-proto-lib netsim-cli-rust-lib
+  #        protobuf::libprotobuf util-lib)
 
   android_add_executable(
     TARGET netsimd
@@ -83,7 +83,7 @@ if(TARGET Rust::Rustc)
 
   # Link NtDll to netsim executables.
   if(WIN32)
-    target_link_libraries(netsim PRIVATE ntdll)
+    # target_link_libraries(netsim PRIVATE ntdll)
     target_link_libraries(netsimd PRIVATE ntdll)
     target_link_libraries(netsim-test PRIVATE ntdll)
     android_license(TARGET "ntdll" LIBNAME None SPDX None LICENSE None
