Use local time for netsim_artifacts file
Test: atest --host-unit-test-only --test-filter netsim
Bug: 305413668
Change-Id: Ie7ef1bd6d43f536169fd8b40b520d4ea26a6b263

--- a/rust/common/Cargo.toml
+++ b/rust/common/Cargo.toml
@@ -8,7 +8,7 @@ crate-type = ["staticlib", "lib"]
 doctest = false
 
 [dependencies]
-chrono = { version = "0.4.19", default-features = false }
+chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
 env_logger = { version = "0.10.0", default-features = false }
 log = "0.4.17"
 rand = "0.8.5"
