--- a/testing/netsim-grpc/pyproject.toml
+++ b/testing/netsim-grpc/pyproject.toml
@@ -1,6 +1,6 @@
 [build-system]
 # AVOID CHANGING REQUIRES: IT WILL BE UPDATED BY PYSCAFFOLD!
-requires = ["setuptools>=46.1.0", "wheel", "grpcio-tools==1.48.1"]
+requires = ["setuptools>=46.1.0", "wheel", "grpcio-tools"]
 build-backend = "setuptools.build_meta"
 
 # [tool.setuptools_scm]
@@ -18,9 +18,9 @@ readme = "README.md"
 version = "0.0.1"
 classifiers = ["Topic :: Software Development"]
 dependencies = [
-    "grpcio==1.48.1",
-    "grpcio-tools==1.48.1",
-    "protobuf==3.20.1",
+    "grpcio",
+    "grpcio-tools",
+    "protobuf",
     "importlib-metadata; python_version<'3.8'",
 ]
 
