--- a/rust/daemon/Cargo.toml
+++ b/rust/daemon/Cargo.toml
@@ -21,7 +21,7 @@ protobuf = "3.2.0"
 protobuf-json-mapping = "3.2.0"
 regex = "1.6.0"
 thiserror = { version = ">=1.0.40"}
-tungstenite = { version = "0.19.0", default-features = false }
+tungstenite = { version = ">=0.19.0", default-features = false }
 lazy_static = "1.4.0"
 log = "0.4.17"
 anyhow = "1"
