--- a/rust/common/Cargo.toml
+++ b/rust/common/Cargo.toml
@@ -9,7 +9,7 @@ doctest = false
 
 [dependencies]
 anyhow = "1"
-chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
+chrono = { version = "0.4.19", default-features = false }
 env_logger = { version = "0.10.0", default-features = false }
 libc = "0.2.150"
 log = "0.4.17"
