--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,10 +38,10 @@ add_subdirectory(proto)
 add_subdirectory(src)
 
 if(TARGET Rust::Rustc)
-  android_add_executable(
-    TARGET netsim LICENSE Apache-2.0 INSTALL . SRC rust/netsim.cc
-    DEPS frontend-client grpc++ netsim-cli-proto-lib netsim-cli-rust-lib
-         protobuf::libprotobuf util-lib)
+  # android_add_executable(
+  #   TARGET netsim LICENSE Apache-2.0 INSTALL . SRC rust/netsim.cc
+  #   DEPS frontend-client grpc++ netsim-cli-proto-lib netsim-cli-rust-lib
+  #        protobuf::libprotobuf util-lib)
 
   android_add_executable(
     TARGET netsimd
@@ -84,7 +84,7 @@ if(TARGET Rust::Rustc)
 
   # Link NtDll to netsim executables.
   if(WIN32)
-    target_link_libraries(netsim PRIVATE ntdll)
+    # target_link_libraries(netsim PRIVATE ntdll)
     target_link_libraries(netsimd PRIVATE ntdll)
     target_link_libraries(netsim-test PRIVATE ntdll)
     android_license(TARGET "ntdll" LIBNAME None SPDX None LICENSE None
@@ -101,4 +101,4 @@ if(NOT NETSIM_EXT)
          protobuf::libprotobuf)
 endif()
 
-add_subdirectory(ui)
+# add_subdirectory(ui)
