Replace netsim cli log with tracing
Bug: 335314571
Test: build_tools.py --task configure compile
Change-Id: Ie508a0c024de9de657d6104252779cc05cde569c

--- a/rust/cli/Cargo.toml
+++ b/rust/cli/Cargo.toml
@@ -23,6 +23,7 @@ netsim-common = { path = "../common" }
 protobuf = "3.2.0"
 cxx = { version = ">=1.0.85", features = ["c++17"] }
 log = "0.4.17"
+tracing = "0.1"
 
 [build-dependencies]
 cxx-build = "1.0.92"
