--- a/rust/proto/Cargo.toml
+++ b/rust/proto/Cargo.toml
@@ -6,6 +6,7 @@ name = "netsim-proto"
 
 [dependencies]
 protobuf = "=3.2.0"
+grpcio =  {version= "0.13.0", default-features = false, features = ["protobufv3-codec"]}
 
 [build-dependencies]
 ##protobuf = "=3.2.0"
