Update cmake pdl_gen definition to explicitly use rust_legacy
Test: TreeHugger
Change-Id: Ida7d79372a194b726d0cb3d5b544354ce0e7c23f

--- a/pdl/CMakeLists.txt
+++ b/pdl/CMakeLists.txt
@@ -10,7 +10,7 @@ pdl_gen(
   OUTPUT
   netlink_packets.rs
   LANG
-  rust)
+  rust_legacy)
 
 pdl_gen(
   NAME
@@ -20,7 +20,7 @@ pdl_gen(
   OUTPUT
   mac80211_hwsim_packets.rs
   LANG
-  rust)
+  rust_legacy)
 
 pdl_gen(
   NAME
@@ -30,4 +30,4 @@ pdl_gen(
   OUTPUT
   ieee80211_packets.rs
   LANG
-  rust)
+  rust_legacy)
