--- a/rust/libslirp-rs/Cargo.toml
+++ b/rust/libslirp-rs/Cargo.toml
@@ -23,5 +23,10 @@ path = "src/lib.rs"
 crate-type = ["staticlib","lib"]
 doctest = false
 
+[dependencies]
+bytes = { version = "1.4.0"}
+libc = "0.2"
+
+
 [build-dependencies]
 ##bindgen = "0.69.4"
