Improve script and instruction to generate Rust proto
Bug: 354290099
Test: scripts/proto_update.sh
Change-Id: Id5aebe52a3bbe4504a36765920b3315d9de49edb

--- a/rust/CMakeLists.txt
+++ b/rust/CMakeLists.txt
@@ -61,21 +61,10 @@ endif()
 
 add_subdirectory(proto)
 
-# Steps to generate protobuf -> rust files are as follows:
+# To re-generate Rust protobuf files, follow these steps:
 #
-# 1. Install protobuf for protoc binary.
-#
-# Linux: sudo apt-get install protobuf-compiler
-#
-# Mac: brew install protobuf
-#
-# 1. Uncomment the following lines in rust/proto/Cargo.toml. build =
-#    "build_cargo.rs" protobuf = "=3.2.0" protobuf-codegen = "3.2.0"
-# 2. export CARGO_HOME=$REPO_EMU/tools/netsim/objs/rust/.cargo
-# 3. cd $REPO_EMU/tools/netsim
-# 4. cargo build --manifest-path rust/proto/Cargo.toml
-# 5. git checkout rust/proto/Cargo.toml
-# 6. bash scripts/format_code.sh
+# 1. Read the file comments in scripts/proto_update.sh
+# 2. Execute `scripts/proto_update.sh`
 
 android_license(TARGET "netsim-daemon" LIBNAME None SPDX None LICENSE None
                 LOCAL None)
