Introduce hostapd-rs to netsimd
- Add skeleton hostapd.rs to hostapd-rs
- Add --rust-hostapd flag to enable hostapd-rs
- Will add Hostapd impl in the following CL

Bug: 355733880
Test: ninja
Change-Id: I823cfba87df45e01c642513762ca887d318f0296

--- a/rust/hostapd-rs/Cargo.toml
+++ b/rust/hostapd-rs/Cargo.toml
@@ -23,5 +23,8 @@ path = "src/lib.rs"
 crate-type = ["staticlib","lib"]
 doctest = false
 
+[dependencies]
+bytes = { version = "1.4.0"}
+
 [build-dependencies]
 ##bindgen = "0.69.4"
