--- a/rust/CMakeLists.txt
+++ b/rust/CMakeLists.txt
@@ -14,6 +14,7 @@ corrosion_set_env_vars(
   NETLINK_PACKETS_PREBUILT=${NetlinkPackets_rs}
   MAC80211_HWSIM_PACKETS_PREBUILT=${Mac80211HwsimPackets_rs}
   IEEE80211_PACKETS_PREBUILT=${Ieee80211Packets_rs}
+  LLC_PACKETS_PREBUILT=${LlcPackets_rs}
   CARGO_HOME=${Rust_CARGO_HOME}
   GRPCIO_SYS_GRPC_INCLUDE_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../../../external/grpc/include"
 )
@@ -32,7 +33,8 @@ corrosion_set_env_vars(
 add_custom_target(
   netsim_rust_packets
   DEPENDS pdl_gen-RootCanalGeneratedPackets_rs pdl_gen-NetlinkPackets_rs
-          pdl_gen-Ieee80211Packets_rs pdl_gen-Mac80211HwsimPackets_rs)
+          pdl_gen-LlcPackets_rs pdl_gen-Ieee80211Packets_rs
+          pdl_gen-Mac80211HwsimPackets_rs)
 
 # Make sure we have the rust packets generated before we build them.
 add_dependencies(cargo-build_netsim-daemon netsim_rust_packets)
