Initial hostapd-rs implementation
- Add initial / partial Hostapd implementation
- Generate and write default hostapd.conf to discovery dir
- Will handle hostapd request and response in the following CL

Bug: 355733880
Test: ninja
Change-Id: Ic7613b971a2c80cd67c79e8fd85b6154f1fc910c

--- a/rust/hostapd-rs/Cargo.toml
+++ b/rust/hostapd-rs/Cargo.toml
@@ -24,7 +24,10 @@ crate-type = ["staticlib","lib"]
 doctest = false
 
 [dependencies]
+anyhow = "1"
 bytes = { version = "1.4.0"}
+log = "0.4.17"
+netsim-common = { path = "../common" }
 
 [build-dependencies]
 ##bindgen = "0.69.4"
