Upgrade protobuf to 26.x
This upgrades protobuf to version 26.x which introduces a few warnings.

Bug: 287101274
Change-Id: I15444ea2944b6f2a49098ffa3030e6cc2d7ecec2

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -90,6 +90,9 @@ if(TARGET Rust::Rustc)
     netsimd-lib PUBLIC android-emu-base android-emu-net
     PRIVATE libslirp glib2 ssl hostapd android-emu-base-headers)
 
+  # Update to protobuf 26.x introduces some warnings.
+  target_compile_options(netsimd-lib PRIVATE -Wno-unused-result)
+
   target_include_directories(
     netsimd-lib PRIVATE . ${PROTOBUF_INCLUDE_DIR}
                         ${ANDROID_QEMU2_TOP_DIR}/include ${ANDROID_AUTOGEN}
