--- a/rust/daemon/Cargo.toml
+++ b/rust/daemon/Cargo.toml
@@ -38,6 +38,7 @@ grpcio =  {version= "0.13.0", default-features = false, features = ["protobufv3-
 futures-channel = { version = "0.3.30", features = ["sink"] }
 futures-executor = "0.3.30"
 futures-util = { version = "0.3.30", default-features = false, features = ["sink"] }
+socket2 = "0.5.5"
 
 [build-dependencies]
 cxx-build = "1.0.92"
