--- a/rust/libslirp-rs/Cargo.toml
+++ b/rust/libslirp-rs/Cargo.toml
@@ -24,9 +24,10 @@ crate-type = ["staticlib","lib"]
 doctest = false
 
 [dependencies]
-bytes = { version = "1.4.0"}
+bytes = { version = "1.4.0" }
 libc = "0.2"
 log = "0.4.17"
+winapi = { version = "0.3", features = ["winsock2"] }
 
 [build-dependencies]
 ##bindgen = "0.69.4"
