Test UDP packets through libslirp using etherparse
```
./scripts/build_tools.py --task runtest
```

Change-Id: I998246ee0afb4273ef2a43ba9c1d6fe80e0c263f

--- a/rust/libslirp-rs/Cargo.toml
+++ b/rust/libslirp-rs/Cargo.toml
@@ -24,6 +24,7 @@ crate-type = ["staticlib","lib"]
 doctest = false
 
 [dependencies]
+etherparse = {version = "0.16" }
 bytes = { version = "1.4.0" }
 http-proxy = { path = "../http-proxy" }
 libc = "0.2"
