--- a/rust/daemon/Cargo.toml
+++ b/rust/daemon/Cargo.toml
@@ -28,7 +28,7 @@ protobuf = "3.2.0"
 protobuf-json-mapping = "3.2.0"
 rand = "0.8.5"
 regex = "1.6.0"
-tokio = { verison = "1.32.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
+tokio = { version = "1.32.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread"] }
 tokio-stream = { version = "0.1.14", features = ["sync"] }
 thiserror = { version = ">=1.0.40"}
 tungstenite = { version = ">=0.19.0", default-features = false }
