--- a/rust/hostapd-rs/Cargo.toml
+++ b/rust/hostapd-rs/Cargo.toml
@@ -28,7 +28,7 @@ anyhow = "1"
 bytes = { version = "1.4.0"}
 log = "0.4.17"
 netsim-common = { path = "../common" }
-tokio = { verison = "1.32.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
+tokio = { version = "1.32.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
 
 [build-dependencies]
 ##bindgen = "0.69.4"
