--- a/rust/http-proxy/Cargo.toml
+++ b/rust/http-proxy/Cargo.toml
@@ -1,4 +1,4 @@
-# Copyright 2022 The Android Open Source Project
+# Copyright 2024 The Android Open Source Project
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,14 +12,15 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-[workspace]
+[package]
+name = "http-proxy"
+version = "0.1.0"
 edition = "2021"
-members = [
-    "proto",
-    "cli",
-    "common",
-    "daemon",
-    "http-proxy",
-    "libslirp-rs",
-    "hostapd-rs",
-]
+
+[lib]
+crate-type = ["staticlib", "lib"]
+doctest = false
+test = false
+
+[dependencies]
+regex = "1.6.0"
