--- a/rust/libslirp-rs/Cargo.toml
+++ b/rust/libslirp-rs/Cargo.toml
@@ -25,6 +25,7 @@ doctest = false
 
 [dependencies]
 bytes = { version = "1.4.0" }
+http-proxy = { path = "../http-proxy" }
 libc = "0.2"
 log = "0.4.17"
 winapi = { version = "0.3", features = ["winsock2"] }
