--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -13,7 +13,6 @@
 # limitations under the License.
 
 [workspace]
-edition = "2021"
 members = [
     "proto",
     "cli",
@@ -23,3 +22,4 @@ members = [
     "libslirp-rs",
     "hostapd-rs",
 ]
+resolver = "2"
