Migrate wifi packet definitions to packets crate
Test: build_tools.py --task configure compile
Test: m netsimd
Test: atest libnetsim_daemon_tests
Bug: 376083885
Change-Id: I1552b9c76bdc2c05bf980f4ca0c23b005ae01de2

--- a/rust/packets/Cargo.toml
+++ b/rust/packets/Cargo.toml
@@ -1,4 +1,4 @@
-# Copyright 2022 The Android Open Source Project
+# Copyright 2024 The Android Open Source Project
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -12,15 +12,19 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-[workspace]
-members = [
-    "proto",
-    "cli",
-    "common",
-    "daemon",
-    "http-proxy",
-    "libslirp-rs",
-    "hostapd-rs",
-    "packets",
-]
-resolver = "2"
+[package]
+name = "netsim-packets"
+version = "0.1.0"
+edition = "2021"
+build = "build.rs"
+
+[lib]
+path = "src/lib.rs"
+crate-type = ["staticlib","lib"]
+doctest = false
+
+[dependencies]
+anyhow = "1"
+bytes = { version = ">=1.4.0"}
+pdl-runtime = "0.3.0"
+
