Enable configuring host DNS in Rust slirp
Bug: 368157071
Test: ninja
Change-Id: I8ab5708f1d3a7634c558f31775d420422550a076

--- a/rust/libslirp-rs/Cargo.toml
+++ b/rust/libslirp-rs/Cargo.toml
@@ -30,6 +30,7 @@ http-proxy = { path = "../http-proxy" }
 libc = "0.2"
 log = "0.4.17"
 winapi = { version = "0.3", features = ["winsock2"] }
+tokio = { version = "1.32.0", features = [ "net", "rt-multi-thread"] }
 
 [build-dependencies]
 ##bindgen = "0.69.4"
