--- a/rust/http-proxy/Cargo.toml
+++ b/rust/http-proxy/Cargo.toml
@@ -27,3 +27,4 @@ regex = "1.6.0"
 httparse = "1.8.0"
 libslirp-rs = { path = "../libslirp-rs" }
 log = "0.4.17"
+tokio = { version = "1.32.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
