--- a/rust/daemon/Cargo.toml
+++ b/rust/daemon/Cargo.toml
@@ -11,7 +11,7 @@ test = false
 
 [dependencies]
 bytes = { version = ">=1.4.0"}
-clap = { version = "4.1.8", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
+clap = { version = "4.1.8", default-features = false, features = ["derive", "error-context", "help", "std", "usage", "env" ] }
 cxx = { version = ">=1.0.85", features = ["c++17"] }
 data-encoding = "2.4.0"
 futures = "0.3.30"
