--- a/rust/CMakeLists.txt
+++ b/rust/CMakeLists.txt
@@ -5,17 +5,25 @@ file(REMOVE ${CMAKE_CURRENT_LIST_DIR}/Cargo.lock)
 
 # This will automatically register all the tests as well.
 corrosion_import_crate(MANIFEST_PATH Cargo.toml FLAGS --offline --verbose)
+
+# Set corrosion env vars
 corrosion_set_env_vars(netsim-common CARGO_HOME=${Rust_CARGO_HOME})
 corrosion_set_env_vars(http-proxy CARGO_HOME=${Rust_CARGO_HOME})
 corrosion_set_env_vars(libslirp-rs CARGO_HOME=${Rust_CARGO_HOME})
-corrosion_set_env_vars(hostapd-rs CARGO_HOME=${Rust_CARGO_HOME})
-corrosion_set_env_vars(
-  netsim-packets
-  NETLINK_PACKETS_PREBUILT=${NetlinkPackets_rs}
-  MAC80211_HWSIM_PACKETS_PREBUILT=${Mac80211HwsimPackets_rs}
-  IEEE80211_PACKETS_PREBUILT=${Ieee80211Packets_rs}
-  LLC_PACKETS_PREBUILT=${LlcPackets_rs}
-  CARGO_HOME=${Rust_CARGO_HOME})
+
+function(set_prebuilt_packets_env_vars target)
+  corrosion_set_env_vars(
+    ${target}
+    NETLINK_PACKETS_PREBUILT=${NetlinkPackets_rs}
+    MAC80211_HWSIM_PACKETS_PREBUILT=${Mac80211HwsimPackets_rs}
+    IEEE80211_PACKETS_PREBUILT=${Ieee80211Packets_rs}
+    LLC_PACKETS_PREBUILT=${LlcPackets_rs}
+    CARGO_HOME=${Rust_CARGO_HOME})
+endfunction()
+
+set_prebuilt_packets_env_vars(hostapd-rs)
+set_prebuilt_packets_env_vars(netsim-packets)
+
 corrosion_set_env_vars(
   netsim-daemon
   LINK_LAYER_PACKETS_PREBUILT=${RootCanalGeneratedPackets_rs}
@@ -44,6 +52,7 @@ add_custom_target(
 
 # Make sure we have the rust packets generated before we build them.
 add_dependencies(cargo-build_netsim-packets netsim_rust_packets)
+add_dependencies(cargo-build_hostapd-rs cargo-build_netsim-packets)
 add_dependencies(cargo-build_netsim-daemon netsim_rust_bt_packets
                  cargo-build_netsim-packets)
 
