--- a/rust/http-proxy/Cargo.toml
+++ b/rust/http-proxy/Cargo.toml
@@ -23,6 +23,7 @@ path = "src/lib.rs"
 doctest = false
 
 [dependencies]
+base64 = "0.22.0"
 regex = "1.6.0"
 httparse = "1.8.0"
 libslirp-rs = { path = "../libslirp-rs" }
