Crate for reading and writing pcap files.
Uses tokio async and zerocopy.

Test: cargo test
Change-Id: Id4d281236b3fd9ab621edbe21507d117579154a8

--- a/rust/CMakeLists.txt
+++ b/rust/CMakeLists.txt
@@ -10,6 +10,7 @@ corrosion_import_crate(MANIFEST_PATH Cargo.toml FLAGS --offline --verbose)
 corrosion_set_env_vars(netsim-common CARGO_HOME=${Rust_CARGO_HOME})
 corrosion_set_env_vars(http-proxy CARGO_HOME=${Rust_CARGO_HOME})
 corrosion_set_env_vars(libslirp-rs CARGO_HOME=${Rust_CARGO_HOME})
+corrosion_set_env_vars(capture CARGO_HOME=${Rust_CARGO_HOME})
 
 function(set_prebuilt_packets_env_vars target)
   corrosion_set_env_vars(
