Add dns_manager to track IpAddr -> domain names.
tests: ./scripts/build_tools.py --task runtest
Change-Id: I6aa2e2f1e2052e7b11f7b56ab92dd47007137a99

--- a/rust/http-proxy/Cargo.toml
+++ b/rust/http-proxy/Cargo.toml
@@ -29,3 +29,7 @@ httparse = "1.8.0"
 libslirp-rs = { path = "../libslirp-rs" }
 log = "0.4.17"
 tokio = { version = "1.32.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
+etherparse = {version = "0.16" }
+
+[dev-dependencies]
+capture = { path = "../capture" }
