--- a/rust/http-proxy/Cargo.toml
+++ b/rust/http-proxy/Cargo.toml
@@ -33,3 +33,7 @@ etherparse = {version = "0.16" }
 
 [dev-dependencies]
 capture = { path = "../capture" }
+
+[[bench]]
+name = "dns_benchmark"
+harness = false
