--- a/rust/http-proxy/Cargo.toml
+++ b/rust/http-proxy/Cargo.toml
@@ -24,6 +24,7 @@ doctest = false
 
 [dependencies]
 base64 = "0.22.0"
+bytes = { version = ">=1.4.0"}
 regex = "1.6.0"
 httparse = "1.8.0"
 libslirp-rs = { path = "../libslirp-rs" }
