Migrate netsim CLI to rust grpcio
Removes all C++ & CXX dependencies needed for gRPC.

Bug: 382331978
Test: m netsim && atest libnetsim_cli_tests
Test: scripts/build_tools.py --task configure compile runtest
Test: objs/netsim -v d
Test: objs/netsim move <device_name> 1 2 3
Test: objs/netsim capture get
Change-Id: I334082b7e7489976752ea90260de542242f1aa3a

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,8 +40,7 @@ add_subdirectory(src)
 if(TARGET Rust::Rustc)
   android_add_executable(
     TARGET netsim LICENSE Apache-2.0 INSTALL . SRC rust/netsim.cc
-    DEPS frontend-client grpc++ netsim-cli-proto-lib netsim-cli-rust-lib
-         protobuf::libprotobuf util-lib)
+    DEPS netsim-cli-proto-lib netsim-cli-rust-lib)
 
   android_add_executable(
     TARGET netsimd
