--- a/rust/hostapd-rs/Cargo.toml
+++ b/rust/hostapd-rs/Cargo.toml
@@ -26,6 +26,7 @@ doctest = false
 [dependencies]
 anyhow = "1"
 bytes = { version = "1.4.0"}
+ccm = "0.5.0"
 log = "0.4.17"
 netsim-common = { path = "../common" }
 netsim-packets = { path = "../packets" }
