Hostapd initial encryption implementation
* Add support for WPA2 CCMP wifi encryption in Hostapd
* Added "--wifi <ssid> <password>" flag to set custom SSID and password
* Added various utility functions in ieee80211.rs to support encryption
* Implemented try_encrypt and try_decrypt in hostapd.rs following
existing C impl.

Bug: 351896143
Test: scripts/build_tools.py --task compile runtest
Test: ./emulator avd_name -feature WiFiPacketStream -netsim-args --wifi EncryptedWifi Password
Change-Id: Iaf5f22dd881fb8d4e43862d51be6a9a8ebb9bd3d

--- a/rust/hostapd-rs/Cargo.toml
+++ b/rust/hostapd-rs/Cargo.toml
@@ -24,6 +24,7 @@ crate-type = ["staticlib","lib"]
 doctest = false
 
 [dependencies]
+aes = { version = "0.8.4"}
 anyhow = "1"
 bytes = { version = "1.4.0"}
 ccm = "0.5.0"
