Netsim Daemon Integration Test Setup
Added linking libraries in daemon for Linux only

Test: scripts/build_tools.py --task runtest
Bug: 379708365
Change-Id: Ib61a6098123f98d73b925c5fbc9afc63055b4fef

--- a/rust/CMakeLists.txt
+++ b/rust/CMakeLists.txt
@@ -43,6 +43,8 @@ corrosion_set_env_vars(
   GRPCIO_SYS_GRPC_INCLUDE_PATH="${CMAKE_CURRENT_SOURCE_DIR}/../../../external/grpc/include"
 )
 
+set_prebuilt_packets_env_vars(netsim-daemon)
+
 add_custom_target(
   netsim_rust_packets
   DEPENDS pdl_gen-RootCanalGeneratedPackets_rs pdl_gen-NetlinkPackets_rs
