Convert hostapd to async crate
Bug: 379316060
Test: scripts/build_tools.py --task configure compile runtest
Change-Id: I1a82134033ac54eabdfddcceaca767333c3afe27

--- a/rust/hostapd-rs/Cargo.toml
+++ b/rust/hostapd-rs/Cargo.toml
@@ -32,7 +32,7 @@ log = "0.4.17"
 netsim-common = { path = "../common" }
 netsim-packets = { path = "../packets" }
 pdl-runtime = "0.3.0"
-tokio = { version = "1.32.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync"] }
+tokio = { version = "1.32.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
 
 [build-dependencies]
 ##bindgen = "0.69.4"
